--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 body {
-  width: 200px;
-  height: 240px;
+  width: 220px;
+  height: 260px;
   text-align: center;
 }
 
@@ -23,4 +23,14 @@ input:focus, textarea:focus, select:focus{
 .logo {
   width: 200px;
   height: 200px;
+}
+.button {
+  background-color: #03a9f4;
+  color: #e1f5fe;
+  margin: 5px;
+  padding: 5px;
+}
+.icon {
+  background-color: #03a9f4;
+  color: #e1f5fe;
 }
