--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -2,6 +2,10 @@ body {
   width: 220px;
   height: 260px;
   text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+  margin: auto;
+
 }
 
 .input-1 {
@@ -33,4 +37,7 @@ input:focus, textarea:focus, select:focus{
 .icon {
   background-color: #03a9f4;
   color: #e1f5fe;
+}
+.logo-new{
+font-style: italic;
 }
