--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -7,6 +7,15 @@ body {
   margin: auto;
 
 }
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+
+}
 
 .input-1 {
   margin: 5px;
